--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,9 +28,10 @@ body {
     background: #242424;
 }
 
-@layer components{
-    .bg-glass{
-        @apply bg-clip-padding backdrop-filter backdrop-blur-md bg-opacity-10 
-		hover:bg-gray-600/10 border-gray-800 text-white
+@layer components {
+    .bg-glass {
+      @apply bg-clip-padding backdrop-filter backdrop-blur-md bg-opacity-40 
+             hover:bg-gray-600/10 border-white text-white;
     }
-}
+  }
+  
