--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 body {
-    background: linear-gradient(to bottom right, rgba(0,0,0,0.9), rgba(0,0,0,0.4)), 
-                url("/bg.png");
+    background: linear-gradient(to bottom right, rgba(0,0,0,0.1), rgba(0,0,0,0.4)), 
+                url("/bg1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
